--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <input type="file" id="selectAvrFile" accept=".xlsx">
 <button id="processFilesButton">Обработать файлы</button>
 <div id="output"></div>
-<script src="dist/bundle.js"></script>
+<script src="bundle.js"></script>
 
 </body>
 </html>
