fix(renderer.js): improve Excel table data processing functionality

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Загрузка файлов</title>
-  <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
 <h1>Выберите файлы Excel</h1>
@@ -12,7 +11,7 @@
 <input type="file" id="selectAvrFile" accept=".xlsx">
 <button id="processFilesButton">Обработать файлы</button>
 <div id="output"></div>
-<script src="bundle.js"></script>
-
+<script src="../dist/bundle.js"></script>
 </body>
 </html>
+
