--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Загрузка файлов</title>
+  <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
 <h1>Выберите файлы Excel</h1>
@@ -11,7 +12,7 @@
 <input type="file" id="selectAvrFile" accept=".xlsx">
 <button id="processFilesButton">Обработать файлы</button>
 <div id="output"></div>
-<script src="../dist/bundle.js"></script>
+<script src="dist/bundle.js"></script>
 </body>
 </html>
 
