--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Загрузка файлов</title>
-  <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
 <h1>Выберите файлы Excel</h1>
@@ -13,6 +12,6 @@
 <button id="processFilesButton">Обработать файлы</button>
 <div id="output"></div>
 <script src="bundle.js"></script>
-<script defer src="/excel-web-processor/bundle.js"></script></body>
+<script defer src="/bundle.js"></script></body>
 </html>
 
