--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <button id="processFilesButton">Обработать файлы</button>
 <div id="output"></div>
 <script src="bundle.js"></script>
-<script defer src="/bundle.js"></script></body>
+<script src="/excel-web-processor/bundle.js"></script></body>
 </html>
 
