--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <input type="file" id="selectAvrFile" accept=".xlsx">
 <button id="processFilesButton">Обработать файлы</button>
 <div id="output"></div>
+<div id="loader">Обработка файлов...</div>
+<div id="timer">Время выполнения: <span id="timerValue">0</span> секунд</div>
 <script src="/excel-web-processor/bundle.js"></script></body>
 </html>
 
