feat: add execution timer, informational messages, and styles
Implemented a timer to display data processing duration. Added informational messages to enhance user experience. Styled components for better visibility.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <input type="file" id="selectAvrFile" accept=".xlsx">
 <button id="processFilesButton">Обработать файлы</button>
 <div id="output"></div>
-<div id="loader" style="display: none;">Обработка файлов...</div>
-<div id="timer" style="display: none;">Время выполнения: <span id="timerValue">0</span> секунд</div>
+<div id="timer">Время выполнения: <span id="timerValue">0</span> секунд</div>
 <script src="dist/bundle.js"></script>
 </body>
 </html>
