--- a/index.html
+++ b/index.html
@@ -6,13 +6,24 @@
   <title>Загрузка файлов</title>
 </head>
 <body>
-<h1>Выберите файлы Excel</h1>
-<input type="file" id="selectMainFile" accept=".xlsx">
-<input type="file" id="selectAvrFile" accept=".xlsx">
-<button id="processFilesButton">Обработать файлы</button>
-<div id="output"></div>
-<div id="timer">Время выполнения: <span id="timerValue">0</span> секунд</div>
+<div class="container">
+  <h1>Выберите файлы Excel</h1>
+  <div class="file-inputs">
+    <label for="selectMainFile">Сводная таблица:</label>
+    <input type="file" id="selectMainFile" accept=".xlsx">
+  </div>
+  <div class="selected_docs"><span class="selected_docs-title">Выбрана сводная таблица:</span>
+    <span id="mainFileName" class="selected_docs-description"></span></div>
+  <div class="file-inputs">
+    <label for="selectAvrFile">Акт ВР:</label>
+    <input type="file" id="selectAvrFile" accept=".xlsx">
+  </div>
+  <div class="selected_docs"><span class="selected_docs-title">Выбран Акт ВР:</span>
+    <span id="avrFileName" class="selected_docs-description"></span></div>
+  <button id="processFilesButton">Обработать файлы</button>
+  <div id="output"></div>
+  <div id="timer">Время выполнения: <span id="timerValue">0</span> секунд</div>
+</div>
 <script src="dist/bundle.js"></script>
 </body>
 </html>
-
