feat: add input field for column number processing

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
   </div>
   <div class="selected_docs"><span class="selected_docs-title">Выбран Акт ВР:</span>
     <span id="avrFileName" class="selected_docs-description"></span></div>
+  <div>
+    <label for="processColumnNumber">Введите номер колонки, по которой будет идти обработка данных </label>
+    <input type="text" id="processColumnNumber">
+  </div>
   <button id="processFilesButton">Обработать файлы</button>
   <div id="output"></div>
   <div id="timer">Время выполнения: <span id="timerValue">0</span> секунд</div>
