--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
   <div class="selected_docs"><span class="selected_docs-title">Выбран Акт ВР:</span>
     <span id="avrFileName" class="selected_docs-description"></span></div>
   <div>
-    <label for="processColumnNumber">Введите номер колонки, по которой будет идти обработка данных </label>
-    <input type="text" id="processColumnNumber">
+    <label for="processColumnNumber">Выберите номер колонки для обработки данных:</label>
+    <select id="processColumnNumber">
+      <option value="1">1</option>
+      <option value="2">2</option>
+    </select>
   </div>
   <button id="processFilesButton">Обработать файлы</button>
   <div id="output"></div>
