--- a/index.html
+++ b/index.html
@@ -20,9 +20,17 @@
   </div>
   <div class="selected_docs"><span class="selected_docs-title">Выбран Акт ВР:</span>
     <span id="avrFileName" class="selected_docs-description"></span></div>
+  <div>
+    <label for="processColumnNumber">Выберите номер колонки для обработки данных:</label>
+    <select id="processColumnNumber">
+      <option value="1">1</option>
+      <option value="2">2</option>
+    </select>
+  </div>
   <button id="processFilesButton">Обработать файлы</button>
   <div id="output"></div>
   <div id="timer">Время выполнения: <span id="timerValue">0</span> секунд</div>
 </div>
+
 <script src="/excel-web-processor/bundle.js"></script></body>
 </html>
